Edited layout links

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,10 +19,11 @@
     <button>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="#">Beginners</a></li>
-        <li class="active"><a href="#">Album History</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="albums">Albums</a></li>
         <li><a href="#">Add New Album</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="#">Play</a></li>
+        <li><a href="#">About</a></li>
       </ul>
       </div>
   </div>
