--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('albums') }}">Albums</a></li>
-        <li><a href="{{ url_for('add_album') }}">Add New Album</a></li>
-        <li><a href="{{ url_for('play') }}">Play</a></li>
-        <li><a href="{{ url_for('about') }}">About</a></li>
+        <li><a href="albums">Albums</a></li>
+        <li><a href="#">Add New Album</a></li>
+        <li><a href="#">Play</a></li>
+        <li><a href="#">About</a></li>
       </ul>
       </div>
   </div>
