--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="albums">Albums</a></li>
+        <li><a href="{{ url_for('albums') }}">Albums</a></li>
         <li><a href="#">Add New Album</a></li>
         <li><a href="#">Play</a></li>
         <li><a href="#">About</a></li>
