Fixed } in play

--- a/templates/play.html
+++ b/templates/play.html
@@ -8,7 +8,7 @@
     <select>
         
       <option value="">Select Track</option>
-        {% for track in tracks}
+        {% for track in tracks %}
       <option value="{{ track.id }}">{{ track.title }}</option>
         {% endfor %}
     </select>
