--- a/templates/play.html
+++ b/templates/play.html
@@ -12,8 +12,10 @@
       <option value="{{ track.id }}">{{ track.title }}</option>
         {% endfor %}
     </select>
-    <input type="submit" name="previous" value="Previous Track">
-    <input type="submit" name="play" value="Play">
-    <input type="submit" name="pause" value="Pause">
-    <input type="submit" name="next" value="Next Track">
+    <form action="{{ url_for('play') }}" method="post">
+        <input type="submit" name="previous" value="Previous Track">
+        <input type="submit" name="play" value="Play">
+        <input type="submit" name="pause" value="Pause">
+        <input type="submit" name="next" value="Next Track">
+    </form>
 {% endblock %}
