--- a/templates/play.html
+++ b/templates/play.html
@@ -12,7 +12,7 @@
       <option value="{{ tracky.id }}">{{ track.title }}</option>
         {% endfor %}
     </select>
-    <form action="{{ url_for('play', album=album.id, track=track.id) }}" method="post">
+    <form action="{{ url_for('play', album_id=album.id, track_id=track.id) }}" method="post">
         <input type="submit" name="previous" value="Previous Track">
         <input type="submit" name="play" value="Play">
         <input type="submit" name="pause" value="Pause">
