--- a/templates/play.html
+++ b/templates/play.html
@@ -5,14 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <select>
-        
-      <option value="">Select Track</option>
-        {% for tracky in tracks %}
-      <option value="{{ tracky.id }}">{{ track.title }}</option>
-        {% endfor %}
-    </select>
     <form action="{{ url_for('play', album_id=album.id, track_id=track.id) }}" method="post">
+        <option value="">Select Track</option>
+        <select name="track_select" onchange="this.form.submit()">
+        {% for tracky in tracks %}
+            <option value="{{ tracky.id }}">{{ track.title }}</option>
+        {% endfor %}
+        </select>
         <input type="submit" name="previous" value="Previous Track">
         <input type="submit" name="play" value="Play">
         <input type="submit" name="pause" value="Pause">
