Added more play routes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('albums') }}">Albums</a></li>
         <li><a href="#">Add New Album</a></li>
-        <li><a href="{{ url_for('play', album_id=1, track_id=1) }}">Play</a></li>
+        <li><a href="{{ url_for('select_album') }}">Play</a></li>
         <li><a href="#">About</a></li>
       </ul>
       </div>
