--- a/templates/select_album.html
+++ b/templates/select_album.html
@@ -13,5 +13,6 @@
             <option value="{{ album.id }}">{{ album.name }}</option>
         {% endfor %}
         </select>
+        <button type="submit">Select</button>
     </form>
 {% endblock %}
