--- a/templates/select_track.html
+++ b/templates/select_track.html
@@ -14,5 +14,6 @@
             <option value="{{ track.id }}">{{ track.name }}</option>
         {% endfor %}
         </select>
+        <button type="submit">Select</button>
     </form>
 {% endblock %}
