--- a/templates/select_track.html
+++ b/templates/select_track.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>Select a Track</h1>
     <h3>Current Album: {{ album.name }}</h3>
-    <form action="{{ url_for('play', album_id=album.id, track_id=track.id) }}" method="post">
+    <form action="{{ url_for('play_track') }}" method="post">
         <select name="track_select">
             <option value="">Select Track</option>
         {% for track in tracks %}
