--- a/templates/select_track.html
+++ b/templates/select_track.html
@@ -11,7 +11,7 @@
         <select name="track_select">
             <option value="">Select Track</option>
         {% for track in tracks %}
-            <option value="{{ track.id }}">{{ track.name }}</option>
+            <option value="{{ track.id }}">{{ track.title }}</option>
         {% endfor %}
         </select>
         <button type="submit">Select</button>
