--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('albums') }}">Albums</a></li>
-        <li><a href="#">Add New Album</a></li>
+        <li><a href="{{ url_for('addAlbum')}}">Add New Album</a></li>
         <li><a href="{{ url_for('select_album') }}">Play</a></li>
         <li><a href="#">About</a></li>
       </ul>
