--- a/templates/add_album.html
+++ b/templates/add_album.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h1>Add an Album</h1>
-    <form action="{{ url_for('add_tracks') }}" method="post">
+    <form action="{{ url_for('addTracks') }}" method="post">
         <input type="text" name="name" placeholder="Enter an Album Title">
         <input type="text" name="artist" placeholder="Enter an Artist Name">
         <input type="number" name="num_tracks" min="1" max="50" placeholder="Enter Number of Tracks">
