--- a/templates/add_tracks.html
+++ b/templates/add_tracks.html
@@ -8,7 +8,7 @@
     <h1>Add Tracks</h1>
     <form action="{{ url_for('finishAddingTracks') }}" method="post">
         {% for i in range(1, num_tracks+1) %}
-        <input type="text" name="title" placeholder="Enter a Track Title">
+        <p><input type="text" name="title" placeholder="Enter a Track Title"></p>
         {% endfor %}
         <input type="hidden" name="album_id" value="{{ album_id }}">
         <button>Finished</button>
