--- a/templates/album.html
+++ b/templates/album.html
@@ -10,7 +10,7 @@
     <ol>
         {% for track in tracks %}
             <li>
-                    {{ track.title }} is {{ track.duration }} (seconds)
+                    {{ track.title }}
             </li>
         {% else %}
             <h5>No tracks found</h5>
