--- a/templates/add_tracks.html
+++ b/templates/add_tracks.html
@@ -7,9 +7,11 @@
 {% block body %}
     <h1>Add Tracks</h1>
     <form action="{{ url_for('finishAddingTracks') }}" method="post">
+    <ol>
         {% for i in range(1, num_tracks+1) %}
-        <p><input type="text" name="title" placeholder="Enter a Track Title"></p>
+        <p><li><input type="text" name="title" placeholder="Enter a Track Title"></li></p>
         {% endfor %}
+    </ol>
         <input type="hidden" name="album_id" value="{{ album_id }}">
         <button>Finished</button>
     </form>
