Modified models and layout and created new route to set locations

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
         <li><a href="{{ url_for('albums') }}">Albums</a></li>
         <li><a href="{{ url_for('addAlbum')}}">Add New Album</a></li>
         <li><a href="{{ url_for('select_album') }}">Play</a></li>
+        <li><a href="{{ url_for('select_album_add_track_locations') }}">Scan Record</a></li>
         <li><a href="#">About</a></li>
       </ul>
       </div>
